Adding gh-pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "scrum-poker",
+  "homepage": "https://emersonsoares.github.io/planning-poker-pwa",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -23,6 +24,11 @@
     "build": "react-scripts build",
     "now-build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
   }
 }
